Fixed missaligned arrow

--- a/webapp/style.css
+++ b/webapp/style.css
@@ -195,22 +195,6 @@ body {
     filter: invert(1) brightness(0.7);
 }
 
-.right {
-    transform: rotate(0deg);
-}
-
-.down {
-    transform: rotate(90deg);
-}
-
-.left {
-    transform: rotate(180deg);
-}
-
-.up {
-    transform: rotate(270deg);
-}
-
 .ProgressBar {
     width: 100%;
     height: 5vh;
